# pico-examples

pico_w/freertos/: CMakeLists.txt
pico_w/freertos/epd/: CMakeLists.txt  bsec_handler.c  bsec_handler.h  lwipopts.h  picow_freertos_epd.c  util.c  util.h
pico_w/freertos/epd/dev/: bme280_i2c_dev.c  bme280_i2c_dev.h  bme68x_i2c_dev.c  bme68x_i2c_dev.h
